[package]
edition = "2024"
name = "musical_constellations_rust"
version = "1.0.0"

[lib]
crate-type = ["cdylib", "lib"] # Compile this crate to a dynamic C library AND a regular Rust lib, so we can import in main.rs

# With this trick you can do #[cfg_attr(feature = "enable-tracing", instrument)] to instrument functions only if enable-tracing feature is enabled
[features]
default = ["enable-tracing"]
enable-tracing = []

[dependencies]
async-compat = "0.2.4" 
async-executor = "1.13.2" 
clap = {version = "4.5.42", features = ["derive"]} 
color-eyre = "0.6.5" 
colorgrad = "0.7.2" 
flume = "0.11.1" 
futures = "0.3.31" 
godot = {version = "0.3.1", features = ["experimental-threads", "experimental-wasm", "serde"]}# `experimental-threads` needed for the audio callback, `serde` needed so we can serialize Vector3 in GraphConstellation, `lazy-function-tables` may be useful to reduce wasm compilation time/size but according to docs it's not compatible with `experimental-threads` 
itertools = "0.14.0" 
kiddo = "5.1.0" 
nalgebra = "0.33.2" 
num-traits = "0.2.19" 
ordered-float = "5.0.0" 
petgraph = {version = "0.8.2", features = ["serde-1"]} 
rand = "=0.9.1" # Pin version for determinism
rand_distr = "0.5.1" 
rand_xoshiro = "=0.7.0" # Pin version for determinism
rayon = "1.10.0" 
scopeguard = "1.2.0" 
serde = {version = "1.0.219", features = ["derive"]}# Needed for snapshot testing 
sha2 = "0.10.9" 
similar-asserts = "1.7.0" 
spin_sleep = "1.3.2" 
strum = {version = "0.27.1", features = ["derive"]} 
time = {version = "0.3.41", features = ["macros"]} 
tokio = {version = "1.45.1", features = ["sync", "time", "macros"]}#  "rt-multi-thread" temporarily disabled due to wasm, shouldn't have a big impact. Since we use the tokio compat bridge, and never manually create a multi-threaded runtime, the tokio compat bridge will default to single threaded (you can check the source code to confirm this) 
tokio-util = "0.7.15" 
tracing = "0.1.41" 
tracing-error = "0.2.1" 
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "time", "local-time"]} 
tracing-tree = {version = "0.4.0", features = ["time"]} 

[dev-dependencies]
insta = {version = "1.43.1", features = ["yaml"]}

[build-dependencies]
built = {version = "0.8", features = ["chrono", "git2"]}
